<resources>
    <string name="app_name">Budget</string>
    <string name="title_activity_transaction_add">Add Transaction</string>
    <string name="title_activity_category_add">Add Category</string>

    <string name="action_settings">UpgradeDB</string>
    <string name="backup_database">Backup DB</string>
    <string name="restore_database">Restore DB</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_category">Add Category</string>
    <string name="show_unlinked">Show Unlinked</string>
    <string name="show_deleted">Show Deleted</string>
    <string name="show_duplicates">Show Duplicates</string>
    <string name="show_possibles">Show Possibles</string>
    <string name="show_all">Show All</string>

    <string name="show_only_actuals">Show Only Actuals</string>
    <string name="show_only_budgets">Show Only Budgets</string>
    <string name="show_remaining">Show Remaining</string>
    <string name="show_actuals">Show Actuals</string>
    <string name="show_budgetnotspent">Show Only Budget remaining</string>

    <string name="download_csv">Download CSV</string>
    <string name="scan_csv">Scan CSV</string>
    <string name="scan_sms">Scan SMS\'s</string>

    <string name="sort_ammount">Sort Ammount</string>
</resources>
