<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thinus.budget.MainActivity">

    <item
        android:id="@+id/action_prev"
        android:icon="@drawable/ic_arrow_back_white_48dp"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_arrow_forward_white_48dp"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/add_transaction" android:title="@string/add_transaction"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_unlinked" android:title="@string/show_unlinked"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_all" android:title="@string/show_all"
        android:orderInCategory="100" app:showAsAction="never" />



    <item android:id="@+id/add_category" android:title="@string/add_category"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_only_actuals" android:title="@string/show_only_actuals"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_only_budgets" android:title="@string/show_only_budgets"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_budgetnotspent" android:title="@string/show_budgetnotspent"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_remaining" android:title="@string/show_remaining"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/scan_csv" android:title="@string/scan_csv"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/scan_sms" android:title="@string/scan_sms"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/backup_database"
        android:title="@string/backup_database"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/restore_database"
        android:title="@string/restore_database"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
